--- a/Libraries/LibCrypto/CMakeLists.txt
+++ b/Libraries/LibCrypto/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SOURCES
     Cipher/ChaCha20.cpp
     Curves/Curve25519.cpp
     Curves/Ed25519.cpp
+    Curves/Ed448.cpp
     Curves/X25519.cpp
     Curves/X448.cpp
     NumberTheory/ModularFunctions.cpp
