Devcontainer: Split ladybird feature into install scripts per distro
We'll add more distros in a future commit.

--- a/.devcontainer/features/ladybird/devcontainer-feature.json
+++ b/.devcontainer/features/ladybird/devcontainer-feature.json
@@ -4,6 +4,17 @@
     "version": "2.0.1",
     "description": "Enable development of Ladybird libraries and applications",
     "options": {
+        "distro": {
+            "type": "string",
+            "proposals": [
+                "ubuntu",
+                "fedora",
+                "arch",
+                "alpine"
+            ],
+            "default": "ubuntu",
+            "description": "Select the base distribution for the container"
+        },
         "llvm_version": {
             "type": "string",
             "proposals": [
